# kid_control

./: .gitignore  README.md  app.py  config.py  kid_control.sh  kidcontrol.config  kidcontrol_hours.txt  manage_config.sh  manage_hours.sh  prop.config  pyproject.toml  router_control.py  run_kid_control.sh  time_checking.sh  time_control.py
app/: config.py  router_control.py  time_control.py
app/shell/: reconnect.sh
app/templates/: edit.html
shells/: run_kid_control.sh
src/: app.py  config.py  router_control.py  time_control.py
src/shell/: check_restrict_status.sh  reconnect.sh  toggle_restrict.sh
src/templates/: edit.html  index.html
templates/: edit.html  index.html
